--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,8 @@
           "src": "(.*)",
           "dest": "/api/index.py"
       }
+  ],
+  "rewrites": [
+      { "source": "/(.*)", "destination": "/api/index" }
   ]
 }
