--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,10 @@
           "use": "@vercel/python"
       }
   ],
-  "routes": [
+  "rewrites": [
       {
-          "src": "(.*)",
-          "dest": "/api/index"
+          "source": "(.*)", 
+	  "destination": "/api/index"
       }
   ]
 }
