--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-      {
-          "src": "*.py",
-          "use": "@vercel/python"
-      }
-  ],
-  "rewrites": [
-      {
-          "source": "/(.*)", 
-	  "destination": "/api/index"
-      }
-  ]
+  "redirects": [{ "source": "/", "destination": "/api" }]
 }
