--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,16 @@
 {
-  "redirects": [{ "source": "/", "destination": "/api" }]
+  //"redirects": [{ "source": "/", "destination": "/api" }]
+    "version": 2,
+    "builds": [
+        {
+            "src": "./index.py",
+            "use": "@vercel/python"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
+    ]
 }
