--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  //"redirects": [{ "source": "/", "destination": "/api" }]
+  /**"redirects": [{ "source": "/", "destination": "/api" }]**/
   [
     "version": 2,
     "builds": [
