--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,4 @@
 {
-  [
-    "version": 2,
-    "builds": [
-        {
-            "src": "./index.py",
-            "use": "@vercel/python"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
-    ]
+    "redirects": [{ "source": "/", "destination": "/api" }]
 }
-  /**"redirects": [{ "source": "/", "destination": "/api" }]**/
+
