--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -2,4 +2,4 @@ home = /usr/bin
 include-system-site-packages = false
 version = 3.11.2
 executable = /usr/bin/python3.11
-command = /usr/bin/python3 -m venv /home/rodnei/Documents/Desafios/Python/DP-L2023/venv
+command = /usr/bin/python3 -m venv DP-L2023
